Update contact section at the bottom
Added a title and made the button bigger

--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
             <section id="contact">
                 <div class="row">
                     <div class="large-6 large-centered small-12 column">
+                        <h3>Contact Me</h3>
                         <p>If you like what you see and want to get in touch, please email me at: <br /><a href="mailto:info@shaunbaisden.com">info@shaunbaisden.com</a></p>
-                        <a href="mailto:info@shaunbaisden.com" class="more-block hover-white">Mail me</a>
+                        <a href="mailto:info@shaunbaisden.com" class="more-block extend-button hover-white">Mail me</a>
                     </div>
                 </div>
             </section>
