Restructure the projects page to a better layout

--- a/projects/index.html
+++ b/projects/index.html
@@ -59,44 +59,35 @@
             </header>
 
             <section class="projects-grid">
-                <div class="row project-item" id="project1">
-                    <div class="large-7 large-push-5 medium-12 medium-push-0 column">
-                        <figure class="portfolio portfolio-1 medium-centered column"></figure>
+                <div class="row">
+                    <div class="portfolio large-6 small-12 column" id="project1">
+                        <figure class="portfolio-1"></figure>
+                        <div class="descriptions">
+                            <h3>Shaun Baisden Portfolio</h3>
+                            <p>My new portfolio. Fully reponsive and coded using HTML5, CSS3, Sass and JQuery.</p>
+                        </div>                   
                     </div>
-                    <div class="descriptions large-4 large-pull-7 medium-12 medium-pull-0 column">
-                        <h3>Shaun Baisden Portfolio</h3>
-                        <p>My new portfolio. Fully reponsive and coded using HTML5, CSS3, Sass and JQuery. Coded on a windows machine using Sublime Text and Prepros.io to compile Sass and add CSS Prefixing.</p>
+                    <div class="portfolio large-6 small-12 column" id="project2">
+                        <figure class="portfolio-2"></figure>
+                        <div class="descriptions">
+                            <h3>Baisden Property Services</h3>
+                            <p>Website I made for a family memeber to show their cleaning business and show the services that they offer.</p>
+                            <a href="http://baisdenpropertyservices.co.uk/" class="more-block hover-gold">Visit Site</a>
+                        </div>
                     </div>
-                </div>
-                <hr class="large-8" />
-                <div class="row project-item" id="project2">
-                    <div class="large-7 medium-12 column">
-                        <figure class="portfolio portfolio-2 medium-centered column"></figure>
+                    <div class="portfolio large-6 small-12 column" id="project3">
+                        <figure class="portfolio-3"></figure>
+                        <div class="descriptions">
+                            <h3>DLG Portal Page</h3>
+                            <p>This was a small portal page I created when I worked at Havas People. It was a quick portal page that linked on to the brands sites under DLG.</p>
+                        </div>
                     </div>
-                    <div class="descriptions large-4 large-offset-1 medium-12 medium-offset-0 column">
-                        <h3>Baisden Property Services</h3>
-                        <p>Website I made for a family memeber to show their cleaning business and show the services that they offer. They wanted to keep it simple and just highlight what they do and what each service that they offer includes. Then have a simple contact form for people to get in touch.</p>
-                        <a href="http://baisdenpropertyservices.co.uk/" class="more-block hover-gold">Visit Site</a>
-                    </div>
-                </div>
-                <hr class="large-8" />
-                <div class="row project-item" id="project3">
-                    <div class="large-7 large-push-5 medium-12 medium-push-0 column">
-                        <figure class="portfolio portfolio-3 medium-centered column"></figure>
-                    </div>
-                    <div class="descriptions large-4 large-pull-7 medium-12 medium-pull-0 column">
-                        <h3>DLG Portal Page</h3>
-                        <p>This was a small portal page I created when I worked at Havas People. It was a quick portal page that linked on to the brands under DLG.</p>
-                    </div>
-                </div>
-                <hr class="large-8" />
-                <div class="row project-item" id="project4">
-                    <div class="large-7 medium-12 column">
-                        <figure class="portfolio portfolio-4 medium-centered column"></figure>
-                    </div>
-                    <div class="descriptions large-4 large-offset-1 medium-12 medium-offset-0 column">
-                        <h3>Manchester University - World&nbsp;Leading&nbsp;Minds</h3>
-                        <p>This was a website I coded whilst working at Havas People. It served as a recruitment tool for jobs within Manchester University. For this website it required me to build it according to a Photoshop design and slice all the relevant images needed to integrate into the site.</p>
+                    <div class="portfolio large-6 small-12 column" id="project4">
+                        <figure class="portfolio-4"></figure>
+                        <div class="descriptions">
+                            <h3>Manchester University - World&nbsp;Leading&nbsp;Minds</h3>
+                            <p>This was a website I coded whilst working at Havas People. It served as a recruitment tool for jobs within Manchester University.</p>
+                        </div>
                     </div>
                 </div>
             </section>
